--- a/platform/Chart.yaml
+++ b/platform/Chart.yaml
@@ -3,7 +3,7 @@ description: A Common Helm Chart for Digital Platform Applications
 keywords:
 - platform
 maintainers:
-- email: outlier.developer@gmail.com
-  name: Luke Mwila
+  - name: eleazar yewa harold
+    email: eleazar.yewa@zenbusiness.com
 name: platform
 version: 0.1.0
