--- a/platform/templates/service-account.yaml
+++ b/platform/templates/service-account.yaml
@@ -4,4 +4,8 @@ kind: ServiceAccount
 metadata:
   name: {{ .Values.serviceAccount.name }} 
   namespace: {{ .Values.serviceAccount.namespace }} 
+  {{ with .Values.serviceAccount.annotations }}
+  annotations:
+  {{- toYaml . | nindent 4 }}
+  {{- end }}
 {{- end }}
