--- a/platform/templates/service-account.yaml
+++ b/platform/templates/service-account.yaml
@@ -3,5 +3,9 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Values.serviceAccount.name }} 
-  namespace: {{ .Values.serviceAccount.namespace }} 
+  namespace: {{ .Values.serviceAccount.namespace }}
+  {{ with .Values.serviceAccount.annotations }}
+  annotations:
+  {{- toYaml . | nindent 4 }}
+  {{- end }}
 {{- end }}
