--- a/applications/fastapi/dev-values.yaml
+++ b/applications/fastapi/dev-values.yaml
@@ -81,3 +81,35 @@ fastapi:
   # Service Entry
   serviceEntry:
     enabled: false
+  # Envoy Filter
+  envoyFilter:
+    enabled: true
+    name: fastapi
+    namespace: python
+    workloadSelector:
+      labels:
+        app: fastapi
+    configPatches:
+      - applyTo: "HTTP_FILTER"
+        match:
+          context: "SIDECAR_INBOUND"
+          listener:
+            filterChain:
+              filter:
+                name: "envoy.filters.network.http_connection_manager"
+                subFilter:
+                  name: "envoy.filters.http.router"
+        patch:
+          operation: "INSERT_BEFORE"
+          value:
+            name: "envoy.lua"
+            typed_config: |
+              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
+              inlineCode: |
+                function envoy_on_request(request_handle)
+                  request_handle:headers():add("x-request-id", request_handle:headers():get("x-request-id"))
+                end
+                function envoy_on_response(response_handle)
+                  response_handle:headers():add("x-envoy-attempt-count", response_handle:headers():get("x-envoy-attempt-count"))
+                  response_handle:headers():add("x-envoy-decorator-operation", response_handle:headers():get("x-envoy-decorator-operation"))
+                end
