--- a/platform/templates/service-entry.yaml
+++ b/platform/templates/service-entry.yaml
@@ -3,7 +3,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: ServiceEntry
 metadata:
-  name: {{ .Values.serviceEntry.name }}
+  name: {{ .Values.serviceEntry.name }}-se
   namespace: {{ .Values.serviceEntry.namespace }}
 spec:
     hosts:
@@ -19,5 +19,4 @@ spec:
     - address: {{ .Values.serviceEntry.address }}
       ports:
         http: {{ .Values.serviceEntry.port }}
-
 {{- end }}
