--- a/platform/templates/ingress.yaml
+++ b/platform/templates/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Values.ingress.name }}
+  name: {{ .Values.ingress.name }}-ingress
   namespace: {{ .Values.ingress.namespace }}
   labels:
     app: {{ .Values.ingress.name }}
