--- a/platform/templates/service.yaml
+++ b/platform/templates/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.service.name }}
+  name: {{ .Values.service.name }}-svc
   namespace: {{ .Values.service.namespace }}
 spec:
   selector:
