--- a/platform/templates/virtualservice.yaml
+++ b/platform/templates/virtualservice.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: {{ .Values.virtualService.name }}
+  name: {{ .Values.virtualService.name }}-vs
   namespace: {{ .Values.virtualService.namespace }}
 spec:
   hosts:
