--- a/platform/templates/service-account.yaml
+++ b/platform/templates/service-account.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.serviceAccount.name }} 
+  name: {{ .Values.serviceAccount.name }}-sa
   namespace: {{ .Values.serviceAccount.namespace }} 
   {{ with .Values.serviceAccount.annotations }}
   annotations:
