--- a/platform/templates/service-entry.yaml
+++ b/platform/templates/service-entry.yaml
@@ -3,7 +3,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: ServiceEntry
 metadata:
-  name: {{ .Values.serviceEntry.name }}
+  name: {{ .Values.serviceEntry.name }}-service-entry
   namespace: {{ .Values.serviceEntry.namespace }}
 spec:
     hosts:
