--- a/platform/templates/peer-authentication.yaml
+++ b/platform/templates/peer-authentication.yaml
@@ -3,7 +3,7 @@
 apiVersion: security.istio.io/v1beta1
 kind: PeerAuthentication
 metadata:
-  name: {{ .Values.peerAuthentication.name }}
+  name: {{ .Values.peerAuthentication.name }}-peer-authentication
   namespace: {{ .Values.peerAuthentication.namespace }}
 spec:
     selector:
