--- a/applications/express/dev-values.yaml
+++ b/applications/express/dev-values.yaml
@@ -22,7 +22,7 @@ express:
   # Service object
   service:
     enabled: true
-    name: express
+    name: express-service
     namespace: express
     appName: express
     type: LoadBalancer
@@ -31,7 +31,7 @@ express:
   # Service Account object
   serviceAccount:
     enabled: true
-    name: express
+    name: express-service-account
     namespace: express
   # Namespace object
   namespace:
@@ -49,7 +49,7 @@ express:
   # Virtual Service
   virtualService:
     enabled: true
-    name: express
+    name: express-virtual-service
     namespace: express
     destination:
       host: express-service
@@ -57,7 +57,7 @@ express:
   # Peer Authentication
   peerAuthentication:
     enabled: true
-    name: express
+    name: express-peer-authentication
     app: express
     namespace: express
     mtls:
@@ -90,26 +90,28 @@ express:
       labels:
         app: express
     configPatches:
-      - applyTo: "HTTP_FILTER"
-        match:
-          context: "SIDECAR_INBOUND"
-          listener:
-            filterChain:
-              filter:
-                name: "envoy.filters.network.http_connection_manager"
-                subFilter:
-                  name: "envoy.filters.http.router"
-        patch:
-          operation: "INSERT_BEFORE"
-          value:
-            name: "envoy.lua"
-            typed_config: |
-              "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
-              inlineCode: |
-                function envoy_on_request(request_handle)
-                  request_handle:headers():add("x-request-id", request_handle:headers():get("x-request-id"))
-                end
-                function envoy_on_response(response_handle)
-                  response_handle:headers():add("x-envoy-attempt-count", response_handle:headers():get("x-envoy-attempt-count"))
-                  response_handle:headers():add("x-envoy-decorator-operation", response_handle:headers():get("x-envoy-decorator-operation"))
-                end
+    - applyTo: "HTTP_FILTER"
+      match:
+        context: "SIDECAR_INBOUND"
+        listener:
+          filterChain:
+            filter:
+              name: "envoy.filters.network.http_connection_manager"
+              subFilter:
+                name: "envoy.filters.http.router"
+      patch:
+        operation: "INSERT_BEFORE"
+        value:
+          name: "envoy.lua"
+          typed_config: |
+            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
+            inlineCode: |
+              function envoy_on_request(request_handle)
+                request_handle:headers():add("x-request-id", request_handle:headers():get("x-request-id"))
+                request_handle:headers():add("x-envoy-decorator-operation", request_handle:headers():get("x-envoy-decorator-operation"))
+              end
+              function envoy_on_response(response_handle)
+                response_handle:headers():add("x-request-id", response_handle:headers():get("x-request-id"))
+                response_handle:headers():add("x-envoy-attempt-count", response_handle:headers():get("x-envoy-attempt-count"))
+                response_handle:headers():add("x-envoy-decorator-operation", response_handle:headers():get("x-envoy-decorator-operation"))
+              end
